# AI-Humanoid-Robotics-TextBook

./: .gitignore  README.md  chatbot.html  chatbot.txt  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
.gemini/: settings.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .gitignore  README.md  book_agent.py  ingest_book.py  local_test.py  main.py  pyproject.toml  qdrant_retrieval.py  railway.toml  requirements.txt  schemas.py  test_import.py  utils.py  validation_README.md  validation_script.py
code-examples/common/: robot-arm.urdf
code-examples/gazebo/my_gazebo_package/: package.xml
code-examples/ros2/hello-world/: setup.py  (+1 more)
code-examples/ros2/vla-integration/: package.xml  setup.cfg  setup.py
code-examples/ros2/vla-integration/my_vla_package/: vla_agent_node.py
docs/: conclusion.md
docs/module1/: chapter1.md  chapter2.md
docs/module2/: chapter3.md  chapter4.md  chapter5.md
docs/module3/: chapter6.md  chapter7.md
docs/module4/: chapter10.md  chapter8.md  chapter9.md
specs/001-humanoid-robotics-book/: book-outline.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-embedding-pipeline/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-retrieval-validation/: data-model.md  research.md  spec.md  tasks.md
specs/004-rag-agent-fastapi/: data-model.md  research.md  spec.md  tasks.md
specs/general-requirements/: requirements.md
src/: README.md
src/css/: chatbot.css  custom.css
src/pages/: index.tsx
src/theme/: Chatbot.tsx  Layout.tsx
(+52 files in other folders)
